# network

./: .gitignore  Cargo.toml  LICENSE  README.md
hanzo-agentic/: Cargo.toml
hanzo-agentic/src/: network.rs
hanzo-ai-format/: Cargo.toml
hanzo-ai-format/src/: artifact.rs  error.rs  lib.rs  manifest.rs  storage.rs
hanzo-api/: Cargo.toml
hanzo-api/src/: node_api_router.rs  node_commands.rs
hanzo-api/src/api_sse/: mcp_tools_service.rs
hanzo-api/src/api_v2/: api_v2_handlers_jobs.rs  api_v2_handlers_mcp_servers.rs
hanzo-api/src/api_ws/: api_ws_handlers.rs
hanzo-baml/: Cargo.toml
hanzo-baml/src/: baml_builder.rs  main.rs
hanzo-brain/: Cargo.toml
hanzo-brain/src/: algorithms.rs  lib.rs
hanzo-compute/: Cargo.toml
hanzo-compute/src/: error.rs  lib.rs  peer.rs  piece.rs  scheduler.rs  swarm.rs  verifier.rs
hanzo-config/: Cargo.toml
hanzo-config/src/: lib.rs
hanzo-consensus/: Cargo.toml
hanzo-consensus/src/: config.rs  engine.rs  lib.rs  types.rs
hanzo-database/: Cargo.toml
hanzo-database/src/: lib.rs  migration.rs  models.rs
hanzo-database/src/backends/: duckdb.rs  lancedb.rs  mod.rs  postgres.rs  redis.rs  sqlite.rs
hanzo-db/: Cargo.toml  README.md
hanzo-db-sqlite/: Cargo.toml  Cargo.toml.backup
hanzo-db-sqlite/src/: agent_manager.rs  cron_task_manager.rs  embedding_function.rs  file_inbox_manager.rs  file_system.rs  hanzo_tool_manager.rs  identity_manager.rs  identity_registration.rs  inbox_manager.rs  invoice_manager.rs  invoice_request_manager.rs  job_manager.rs  keys_manager.rs  lib.rs  llm_provider_manager.rs  mcp_server_manager.rs  oauth_manager.rs  performance.rs  preferences.rs  prompt_manager.rs  regex_pattern_manager.rs  retry_manager.rs  settings_manager.rs  source_file_manager.rs  tool_payment_req_manager.rs  tool_playground.rs  tracing.rs  vector_resource_manager.rs  wallet_manager.rs
hanzo-db/src/: lib.rs  models.rs  vector_search.rs
hanzo-db/src/backends/: mod.rs  sqlite.rs
hanzo-did/: Cargo.toml
hanzo-did/examples/: hanzo_did_demo.rs
hanzo-did/src/: did.rs  document.rs  error.rs  lib.rs  proof.rs  resolver.rs  service.rs  verification_method.rs
hanzo-embed/: Cargo.toml
hanzo-embed/src/: embedding_generator.rs  hanzo_embedding_errors.rs  lib.rs  mock_generator.rs  model_storage.rs  model_type.rs  native_embedding_generator.rs
hanzo-fs/: Cargo.toml
hanzo-fs/src/: hanzo_file_manager.rs  hanzo_file_manager_ops.rs  hanzo_fs_error.rs  lib.rs  test_utils.rs
hanzo-fs/src/simple_parser/: file_parser_grouping.rs  file_parser_helper.rs  simple_parser.rs  text_group.rs
hanzo-fs/src/simple_parser/local_parsing/: csv_parsing.rs  docx_parsing.rs  html_parsing.rs  json_parsing.rs  local_parsing.rs  md_parsing.rs  pdf_parsing.rs  txt_parsing.rs  xlsx_parsing.rs
hanzo-fs/tests/: pdf_parsing_tests.rs
hanzo-hmm/: Cargo.toml  README.md  marketmaker_storage.db
hanzo-hmm/src/: adapter.rs  bitdelta.rs  free_energy.rs  hamiltonian.rs  hmm_core.rs  lib.rs  regime.rs  routing.rs  storage.rs
hanzo-http-api/: Cargo.toml
hanzo-http-api/src/: lib.rs  node_api_router.rs  node_commands.rs
hanzo-http-api/src/api_sse/: README.md  mcp_tools_service.rs
hanzo-http-api/src/api_v1/: mod.rs
hanzo-http-api/src/api_v2/: api_v2_handlers_cron.rs  api_v2_handlers_ext_agent_offers.rs  api_v2_handlers_general.rs  api_v2_handlers_jobs.rs  api_v2_handlers_ngrok.rs  api_v2_handlers_prompts.rs  api_v2_handlers_tools.rs  api_v2_handlers_vecfs.rs  api_v2_handlers_wallets.rs
hanzo-http-api/src/api_ws/: api_ws_routes.rs
hanzo-identity/: Cargo.toml
hanzo-identity/src/: hanzo_registry.rs  lib.rs
hanzo-identity/src/abi/HanzoNft.sol/: HanzoNFT.json
hanzo-identity/src/abi/HanzoRegistry.sol/: HanzoRegistry.json
hanzo-job-queue-manager/: Cargo.toml
hanzo-jobs/: Cargo.toml
hanzo-jobs/src/: job_queue_manager.rs
hanzo-kbs/: Cargo.toml  README.md
hanzo-kbs/src/: attestation.rs  error.rs  kbs.rs  kms.rs  lib.rs  pqc_integration.rs  pqc_vault.rs  types.rs  vault.rs
hanzo-kbs/src/kms/: api.rs  memory_kms.rs
hanzo-l2/: Cargo.toml
hanzo-l2/src/: bridge.rs  commitment.rs  lib.rs  sequencer.rs  validator.rs
hanzo-libp2p/: Cargo.toml  DOCKER.md  README.md
hanzo-libp2p-relayer/: .dockerignore  Cargo.toml  Dockerfile  HANZO_NETWORKING.md
hanzo-libp2p-relayer/examples/: protocol_debug.rs  relay_client.rs  test_connection.rs  test_external_ip.rs  test_identity_resolution.rs
hanzo-libp2p-relayer/src/: main.rs  relay_manager.rs
hanzo-libp2p/src/: libp2p_server.rs  main.rs  relay_manager.rs
hanzo-machine/: Cargo.toml  README.md  build.rs  wrapper.h
hanzo-machine/src/: error.rs  lib.rs  manager.rs  sidecar.rs  sys.rs  types.rs
hanzo-machine/tests/: sys_compiles.rs  wrapper_basics.rs
hanzo-mcp/: Cargo.toml
hanzo-mcp/src/: mcp_methods.rs
hanzo-messages/: Cargo.toml
hanzo-messages/src/: lib.rs  main.rs
hanzo-messages/src/hanzo_message/: hanzo_message.rs  hanzo_message_encryption.rs  hanzo_message_error.rs  hanzo_message_extension.rs  hanzo_message_schemas.rs  hanzo_message_serializers.rs  hanzo_message_signing.rs  mod.rs
hanzo-messages/src/hanzo_utils/: encryption.rs  hanzo_logging.rs  hanzo_message_builder.rs  hanzo_message_builder_bundled.rs  hanzo_message_builder_bundled_tools.rs  hanzo_message_to_prompt.rs  hanzo_path.rs  hanzo_time.rs  job_scope.rs  mod.rs  signatures.rs  test_utils.rs
hanzo-messages/src/schemas/: agent_network_offering.rs  crontab.rs  hanzo_fs.rs  hanzo_name.rs  hanzo_network.rs  hanzo_preferences.rs  hanzo_proxy_builder_info.rs  hanzo_tool_offering.rs  identity.rs  identity_registration.rs  inbox_name.rs  invoices.rs  job.rs  llm_message.rs  mod.rs  prompts.rs  retry.rs  smart_inbox.rs  subprompts.rs  tool_router_key.rs  ws_types.rs
hanzo-messages/tests/: hanzo_encryption_interop.rs  hanzo_message_builder_tests.rs  hanzo_message_tests.rs  hanzo_name_tests.rs
hanzo-mining/: Cargo.toml
hanzo-mining/src/: bridge.rs  consensus.rs  evm.rs  ledger.rs  lib.rs  wallet.rs
hanzo-model-discovery/: Cargo.toml
hanzo-model-discovery/src/: lib.rs
hanzo-models/: Cargo.toml
hanzo-models/src/: lib.rs
(+103 files in other folders)
