[package]
name = "hanzo-agentic"
version = "1.1.19"
edition = "2021"
description = "Agentic network integration for hanzo-node with PQ privacy"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
aes-gcm = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }