[package]
name = "hanzo-ai-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Hanzo AI - Universal .ai file format for AI artifacts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanzoai/hanzo"
keywords = ["ai", "machine-learning", "models", "artifacts", "format"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
zip = "2.1"
tar = "0.4"
flate2 = "1.0"
url = "2.5"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
