[package]
name = "hanzo-api"
version = "1.1.12"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Http Api for Hanzo AI platform"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "4.2", features = ['yaml'] }
utoipa-swagger-ui = { version = "7.1.0", optional = true, features = ["vendored"] }
chrono = { version = "0.4", features = ['serde'] }
bytes = "1.10.1"
async-trait = "0.1.81"
once_cell = "1.19.0"
warp = { version = "0.3", features = ["compression", "compression-gzip", "tls"] }
serde_json = "1.0.117"
futures = "0.3.30"
async-channel = "2.3.1"
x25519-dalek = { version = "2.0.1", features = ['static_secrets'] }
ed25519-dalek = { version = "2.1.1", features = ['rand_core'] }
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
hanzo-tools = { version = "1.1.11", path = "../hanzo-tools" }
reqwest = { version = "0.11.27", features = ['json'] }
tokio-stream = "0.1.10"
rand = "0.8.5"
tokio = { version = "1.36", features = ['rt', 'rt-multi-thread', 'macros', 'fs', 'io-util', 'net', 'sync', 'time'] }
tokio-rustls = "0.23"
rustls = "0.21"
hyper = { version = "0.14.30", features = ["server"] }
rustls-pemfile = "1.0.3"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
rmcp = { workspace = true, features = ["server", "macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

[features]
default = []
swagger-ui = ["utoipa-swagger-ui"]
