[package]
name = "hanzo-baml"
description = "Hanzo AI - BAML Integration Library"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/hanzoai/node"
homepage = "https://hanzo.ai"

[dependencies]
baml-runtime = { git = "https://github.com/BoundaryML/baml.git", tag = "0.56.1", package = "baml-runtime", features = [
    "internal",
] }
baml-types = { git = "https://github.com/BoundaryML/baml.git", tag = "0.56.1", package = "baml-types" }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
indexmap = { version = "2.1.0", features = ["serde"] }
regex = { workspace = true }
serde_json = { workspace = true }
