[package]
name = "hanzo-config"
description = "Hanzo AI - Config Library"
license = "MIT"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
dirs = { workspace = true }
tokio = { workspace = true }
walkdir = "2"
num_cpus = "1.16"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }