[package]
name = "hanzonet-config"
description = "Hanzo Network — node configuration library"
license = "MIT"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository = "https://github.com/hanzonet/network"

[lib]
name = "hanzo_config"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
dirs = { workspace = true }
tokio = { workspace = true }
walkdir = "2"
num_cpus = "1.16"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }