[package]
name = "hanzo-consensus"
version = "1.1.21"
edition = "2021"
description = "Hanzo Network — Quasar BFT consensus engine for L2 (wraps lux-consensus)"
license = "MIT"
repository = "https://github.com/hanzonet/network"

[dependencies]
# Lux consensus SDK (Quasar protocol)
lux-consensus = "1.22"

# PQC for dual certificates
hanzo-pqc = { workspace = true }

# Core deps
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
blake3 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
