[package]
name = "hanzo-db-sqlite"
version = "1.1.12"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Sqlite for Hanzo AI platform"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4", features = ['serde'] }
rusqlite = { workspace = true }
sqlite-vec = "0.1.6"
tokio = { version = "1.36", features = ['rt', 'rt-multi-thread', 'macros', 'fs', 'io-util', 'net', 'sync', 'time'] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
keyphrases = "0.3.3"
hanzo-tools = { version = "1.1.11", path = "../hanzo-tools" }
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
hanzo-embed = { version = "1.1.12", path = "../hanzo-embed" }
reqwest = { version = "0.11.27", features = ['json'] }
bincode = "1.3.3"
zerocopy = "0.8.9"
bytemuck = "1.7"
thiserror = "2.0"
blake3 = "1.5"
hex = "0.4.3"
rand = "0.8.5"
x25519-dalek = { version = "2.0.1", features = ['static_secrets'] }
ed25519-dalek = { version = "2.1.1", features = ['rand_core'] }
semver = "1.0"
log = "0.4.20"

[dev-dependencies]
tempfile = "3.8"
rust_decimal = "1.17.0"
