[package]
name = "hanzo-embed"
version = "1.1.12"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Embedding for Hanzo AI platform"

[dependencies]
bincode = "1.3.3"
serde_json = "1.0.117"
rand = "0.8.5"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
reqwest = { version = "0.11.27", features = ["json", "blocking"] }
lazy_static = "1.4.0"
async-trait = "0.1.81"
keyphrases = "0.3.3"
futures = "0.3.30"
csv = "1.1.6"
utoipa = { version = "4.2", features = ["yaml"] }
regex = "1"
serde = { version = "1.0.219", features = ["derive"] }