[package]
name = "hanzo-fs"
description = "Hanzo AI - Filesystem Library"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/hanzoai/node"
homepage = "https://hanzo.ai"

[dependencies]
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
hanzo-embed = { version = "1.1.12", path = "../hanzo-embed" }
hanzo-db-sqlite = { version = "1.1.12", path = "../hanzo-db-sqlite" }
bincode = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
comrak = { version = "0.22.0", default-features = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
keyphrases = { workspace = true }
futures = { workspace = true }
scraper = "0.19.0"
urlencoding = "2.1.0"
walkdir = "2.5.0"
csv = { workspace = true }
utoipa = { workspace = true }
regex = { workspace = true }
os_path = { workspace = true }
tempfile = { workspace = true }
hanzo-runtime = { version = "1.1.12", path = "../hanzo-runtime" }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "0.5"

[[test]]
name = "pdf_parsing_tests"
path = "tests/pdf_parsing_tests.rs"
required-features = ["static-pdf-parser"]

# [[test]]
# name = "vector_resource_tests"
# path = "tests/vector_resource_tests.rs"
