[package]
name = "hanzo-identity"
version = "1.1.12"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Crypto Identities for Hanzo AI platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ['rt', 'rt-multi-thread', 'macros', 'fs', 'io-util', 'net', 'sync', 'time'] }
serde_json = "1.0.117"
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
x25519-dalek = { version = "2.0.1", features = ['static_secrets'] }
ed25519-dalek = { version = "2.1.1", features = ['rand_core'] }
chrono = { version = "0.4", features = ['serde'] }
dashmap = "6.0"
lazy_static = "1.4.0"
trust-dns-resolver = "0.23.2"
hanzo-runtime = { version = "1.1.12", path = "../hanzo-runtime" }
tempfile = "3.8"
