[package]
name = "hanzo-job-queue-manager"
description = "Hanzo AI - Job Queue Manager Library"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/hanzoai/node"
homepage = "https://hanzo.ai"

[dependencies]
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
hanzo-db-sqlite = { version = "1.1.12", path = "../hanzo-db-sqlite" }
hanzo-embed = { version = "1.1.12", path = "../hanzo-embed" }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
# hanzo-vector_resources = { workspace = true }
tempfile = { workspace = true }
