[package]
name = "hanzo-libp2p-relayer"
description = "Hanzo AI - Libp2P Relayer Library"
license = "MIT"
version = "1.1.12"
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive", "env"] }
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
hanzo-identity = { version = "1.1.12", path = "../hanzo-identity" }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
dotenv = "0.15.0"
derivative = "2.2"
uuid = { workspace = true, features = ["v4"] }
thiserror = "2.0.12"
reqwest = { workspace = true, features = ["json"] }
dashmap = { workspace = true }
libp2p = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
