[package]
name = "hanzo-libp2p"
version = "1.1.12"
edition = "2021"
authors = ["Hanzo AI Inc"]
license = "MIT"
repository = "https://github.com/hanzoai/hanzo-node"
homepage = "https://hanzo.ai"
description = "Libp2P Relayer for Hanzo AI platform"

[dependencies]
tokio = { version = "1.36", features = ['rt', 'rt-multi-thread', 'macros', 'fs', 'io-util', 'net', 'sync', 'time'] }
serde_json = "1.0.117"
serde = { version = "1.0.219", features = ['derive'] }
clap = { version = "4.5.4", features = ["env"] }
hanzo-messages = { version = "1.1.12", path = "../hanzo-messages" }
hanzo-identity = { version = "1.1.12", path = "../hanzo-identity" }
hanzo-libp2p-relayer = { version = "1.1.12", path = "../hanzo-libp2p-relayer" }
x25519-dalek = { version = "2.0.1", features = ['static_secrets'] }
ed25519-dalek = { version = "2.1.1", features = ['rand_core'] }
rand = "0.8.5"
hex = "0.4.3"
chrono = { version = "0.4", features = ['serde'] }
dotenv = "0.15.0"
derivative = "2.2"
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "2.0.12"
reqwest = { version = "0.11.27", features = ['json'] }
dashmap = "6.0"
libp2p = { version = "0.55.0", features = ["tcp", "tokio", "noise", "yamux", "identify", "ping", "relay", "dcutr", "request-response", "macros"] }
libp2p-tcp = { version = "0.43.0", features = ["tokio"] }
libp2p-request-response = { version = "0.28.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.8"
